--- a/src/components/Form/formComponentStyle.css
+++ b/src/components/Form/formComponentStyle.css
@@ -51,12 +51,12 @@
   justify-content: center;
   width: calc(33.33% - 10px); /* Three items per row with spacing */
   min-width: 250px;
-  padding: 1%;
+  padding: 0% 1%;
 }
 
 .form-row label {
   font-size: 16px;
-  margin-bottom: 8px;
+  margin-bottom: 10px;
 }
 
 .form-row input,
